# temp_auction

./: Auction.cpp  Auction.h  CMakeLists.txt  README.md  main.cpp
tests/: AuctionTest.cpp  CMakeLists.txt
